[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/asset_scenes/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://things/WorkSans-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 39
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
process_priority = -13
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 32.0
margin_top = 31.0
margin_right = 378.0
margin_bottom = 567.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 346.0
margin_bottom = 257.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Five
Nights
at
Retard's"

[node name="spacer" type="Label" parent="VBoxContainer"]
margin_top = 261.0
margin_right = 346.0
margin_bottom = 323.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )

[node name="newGame" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 327.0
margin_bottom = 394.0
focus_neighbour_top = NodePath("../quit")

[node name="continue" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 398.0
margin_bottom = 465.0
text = "Continue"

[node name="quit" parent="VBoxContainer" instance=ExtResource( 1 )]
focus_neighbour_bottom = NodePath("../newGame")
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 880.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 64.0

[node name="nightLabel" type="Label" parent="MarginContainer"]
margin_right = 128.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "Night 1"

[connection signal="pressed" from="VBoxContainer/newGame" to="." method="_on_newGame_pressed"]
[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
